# neo4j-yass-mcp

./: .coveragerc  .dockerignore  .env.example  .gitignore  ANALYSIS_COMPLETE.txt  ARCHITECTURE_REFACTORING_PLAN.md  BUSINESS_CASE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COVERAGE_ANALYSIS.md  COVERAGE_REFERENCE_CARD.md  DOCKER.md  DOCUMENTATION_INDEX.md  Dockerfile  GITHUB_PRE_PUBLICATION_CHECKLIST.md  GITHUB_PUBLICATION_SUMMARY.md  GITHUB_SETUP.md  LICENSE  Makefile  PUBLICATION_READY_SUMMARY.md  PUBLISH_TO_GITHUB.md  QUICK_START.md  README.md  README_SHORT.md  REFACTORING_RECOMMENDATIONS.md  RELEASE_GUIDE.md  RELEASE_NOTES_v1.3.0.md  SECURITY.md  SECURITY_AUDIT_FINDINGS.md  SECURITY_WORK_COMPLETE.md  TEST_IMPLEMENTATION_GUIDE.md  benchmark_async_performance.py  config.py  docker-compose.multi-instance.yml  docker-compose.yml  pyproject.toml  server.py  sitecustomize.py  test-mcp.html  (+2 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  security_vulnerability.yml
.github/workflows/: ci.yml
docs/: ADDING_LLM_PROVIDERS.md  ARCHITECTURE_REFACTORING_COMPLETE.md  BUSINESS_CASE.md  CHAINED_SECURITY_IMPLEMENTATION_PLAN.md  DRY_SANITIZATION_SUMMARY.md  FIXES_APPLIED.md  FUTURE_IMPROVEMENTS_ROADMAP.md  IMPROVEMENTS_SUMMARY.md  LLM_PROVIDERS.md  MCP_TEST_PAGE_DESIGN.md  PHASE_3_COMPLETE.md  PROMPT_INJECTION_PREVENTION.md  README.md  SANITIZATION_ARCHITECTURE.md  SECURITY.md  SECURITY_FIXES.md  SOFTWARE_ARCHITECTURE.md  SOFTWARE_ARCHITECTURE_ASCII.md  bootstrap-migration-guide.md  phase-3.4-modularization.md
docs/FutureFeatures/: 01-query-plan-analysis.md  15-query-complexity-limits.md  16-llm-log-analysis.md  FEATURE_SUMMARY.md  README.md
docs/adr/: ADR-001-fastmcp-proxy-dynamic-registry.md
docs/archive/: COVERAGE_ANALYSIS.md  COVERAGE_ANALYSIS_INDEX.md  GITHUB_PRE_PUBLICATION_CHECKLIST.md  GITHUB_PUBLICATION_CHECKLIST.md  GITHUB_REPOSITORY_SETTINGS.md  QUICKSTART_TEST.md  README.md  UNCOVERED_LINES_SUMMARY.md
docs/development/: ASYNC_MIGRATION_ANALYSIS.md  CLEANUP_SUMMARY.md  NEXT_STEPS_TO_90_PERCENT.md  ORGANIZATION_SUMMARY.md  REFACTORING_SUMMARY.md
docs/features/query-analysis/: API_REFERENCE.md  EXAMPLES.md  PRODUCTION_GUIDE.md  README.md
docs/features/query-analysis/implementation/: QUERY_PLAN_ANALYSIS_IMPLEMENTATION_PLAN.md
docs/inprogress/: QUERY_ANALYSIS_QUICK_REFERENCE.md  QUERY_ANALYSIS_USER_GUIDE.md
docs/repo-arai/: ARCHITECTURE_MERMAID_DIAGRAMS.md  BUG_FIXES_2025-11-15.md  CLEANUP_SUMMARY.md  COMPLETE_REVIEW_RESOLUTION.md  COMPREHENSIVE_ANALYSIS_AND_IMPROVEMENTS.md  COMPREHENSIVE_AUDIT_REPORT_2025-11-08.md  CONSOLIDATED_IMPLEMENTATION_PLAN.md  CRITICAL_FINDINGS_2025-11-15.md  DOCKER_BEST_PRACTICES_VERIFICATION_2025-11-08.md  FINAL_SUMMARY.md  FIXES_SUMMARY_2025-11-15.md  PHASE3_COMPLETION_SUMMARY.md  PHASE3_DEPENDENCY_UPGRADE_ANALYSIS.md  PHASE3_FINAL_REPORT.md  PROFILE_SAFETY_IMPLEMENTATION.md  PYTHON_UPGRADE_REFACTORING_REPORT_2025-11-08.md  README.md  RESULT_MATERIALIZATION_ANALYSIS.md  SECURITY_AUDIT_2025-11-16.md  SECURITY_AUDIT_ADDENDUM_2025-11-16.md  SOFTWARE_ARCHITECTURE_DOCUMENT.md  code-cleanup-summary.md  codex5.1-resolution-record.md  documentation-fixes-summary.md  profile-safety-guards.md  qwen3-arai.md  record-materialization-analysis.md
docs/repo-arai/archive/: COMPREHENSIVE_ANALYSIS_AND_IMPROVEMENTS.md
docs/repo-arai/llm-analysis/: glm46-arai.md  kimik2-arai.md
docs/security/: AST_VALIDATION_GUIDE.md  IMPLEMENTATION_VERBOSE_FLAG.md  SECURITY_AUDIT_FINAL_SUMMARY.md  SECURITY_FIXES_SUMMARY.md  SECURITY_REVIEW_2025-11-16.md  VERBOSE_FLAG_PROPAGATION_REVIEW.md  YOUR_IMPLEMENTATION_REVIEW.md
examples/: ARCHITECTURE_NOTE.md  README_RATE_LIMITING.md  query_analysis_examples.py  rate_limiting_example.py
src/neo4j_yass_mcp/: __init__.py  async_graph.py  bootstrap.py  secure_graph.py  server.py  tool_wrappers.py
src/neo4j_yass_mcp/config/: __init__.py  llm_config.py  runtime_config.py  security_config.py  utils.py
src/neo4j_yass_mcp/handlers/: __init__.py  resources.py  tools.py
src/neo4j_yass_mcp/security/: __init__.py  audit_logger.py  complexity_limiter.py  rate_limiter.py  sanitizer.py  validators.py
src/neo4j_yass_mcp/tools/: __init__.py  bottleneck_detector.py  cost_estimator.py  query_analyzer.py  query_utils.py  recommendation_engine.py
src/neo4j_yass_mcp/types/: __init__.py  responses.py
tests/: __init__.py  conftest.py  test-mcp.html  test_html_compatibility.py  test_query_analysis_html.py  test_utf8_attacks.py
tests/integration/: __init__.py  test_query_analyzer.py  test_server_integration.py  test_server_startup.py
tests/unit/: test_async_graph.py  test_audit_logger.py  test_bootstrap.py  test_complexity_limiter.py  test_config.py  test_error_sanitization_fix.py  test_query_analyzer.py  test_query_utils.py  test_rate_limiter.py  test_readonly_bypass_fixes.py  test_response_types.py  test_runtime_config.py  test_sanitizer.py  test_sanitizer_unicode.py  test_secure_graph.py  test_security_validators.py  test_server.py  test_server_audit.py  test_server_complexity.py  test_server_config.py  test_server_rate_limiting.py  test_server_utils.py  test_tools.py
utilities/: __init__.py  audit_logger.py  sanitizer.py
