[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neo4j-yass-mcp"
version = "1.4.0"
description = "YASS (Yet Another Secure Server) - Production-ready, security-enhanced MCP server for Neo4j with LLM integration"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Neo4j YASS Contributors"}
]
keywords = [
    "neo4j",
    "mcp",
    "llm",
    "langchain",
    "graph-database",
    "security",
    "cypher",
    "ai",
    "model-context-protocol"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # MCP Server Framework
    "fastmcp>=2.13.0,<3.0.0", # Upgraded from 0.4.1 (Phase 3)
    "mcp>=1.21.0,<2.0.0", # MCP Protocol SDK
    # LangChain Core & Providers
    "langchain>=1.0.0,<2.0.0", # Upgraded from 0.3.27 (Phase 3)
    "langchain-core>=1.0.4,<2.0.0", # Required for LangChain 1.0
    "langchain-neo4j>=0.6.0,<1.0.0", # Neo4j integration - Updated Jan 2025 (was 0.1.0)
    "langchain-openai>=1.0.0,<2.0.0", # Upgraded from 0.3.35 (Phase 3)
    "langchain-anthropic>=1.0.0,<2.0.0", # Upgraded from 0.3.22 (Phase 3)
    "langchain-google-genai>=2.0.0,<3.0.0", # Already v2.x+ (supports langchain-core>=1.0)
    # Database & Core Dependencies
    "neo4j>=5.28.0,<6.0.0", # Updated Jan 2025 (was 5.14.0) - Security fixes, Python 3.13 support
    "python-dotenv>=1.0.0,<2.0.0",
    "pydantic>=2.10.0,<3.0.0", # Updated Jan 2025 (was 2.0.0) - Latest stable
    "tokenizers>=0.19.1,<1.0.0", # Hugging Face tokenizers (for token counting)
    # Security & Sanitization libraries
    "confusable-homoglyphs>=3.2.0,<4.0.0", # Homograph attack detection
    "ftfy>=6.0.0,<7.0.0", # Unicode normalization & UTF-8 attack prevention
    "zxcvbn>=4.4.0,<5.0.0", # Password strength estimation
    "bandit>=1.8.6",
    "mypy>=1.18.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<9.0.0",
    "pytest-cov>=4.1.0,<6.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "ruff>=0.1.0,<1.0.0",
    "mypy>=1.7.0,<2.0.0",
    "black>=23.12.0,<25.0.0",
    "isort>=5.13.0,<6.0.0",
]

security = [
    "bandit>=1.7.0,<2.0.0",
    "safety>=2.3.0,<4.0.0",
]

all = [
    "neo4j-yass-mcp[dev,security]",
]

[project.urls]
Homepage = "https://github.com/hdjebar/neo4j-yass-mcp"
Documentation = "https://github.com/hdjebar/neo4j-yass-mcp/tree/main/docs"
Repository = "https://github.com/hdjebar/neo4j-yass-mcp"
Issues = "https://github.com/hdjebar/neo4j-yass-mcp/issues"
Changelog = "https://github.com/hdjebar/neo4j-yass-mcp/blob/main/CHANGELOG.md"

[project.scripts]
neo4j-yass-mcp = "neo4j_yass_mcp.server:main"

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "W",   # pycodestyle warnings
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # flake8-bandit (security)
]
ignore = [
    "E501",  # line too long (handled by black)
    "S101",  # use of assert (acceptable in tests)
    "E402",  # module level import not at top (intentional for bootstrap ordering)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106", "S104"]  # Allow assert, test passwords/credentials, test bind addresses
"tests/integration/test_server_integration.py" = ["S101", "S106"]  # Allow assert and hardcoded test passwords
"src/neo4j_yass_mcp/config/runtime_config.py" = ["S105"]  # Password redaction constants (not actual passwords)

[tool.black]
line-length = 100
target-version = ["py313"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_calls = false
warn_redundant_casts = true
warn_unused_ignores = false  # This allows unused ignore comments for optional dependencies
warn_return_any = true
strict_optional = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    ".venv/*",
    "venv/*",
    "*/site-packages/*",
]
concurrency = ["multiprocessing"]
parallel = true
sigterm = true

[tool.coverage.report]
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv"]
skips = [
    "B101",  # assert_used (acceptable in tests)
    "B104",  # bind_all_interfaces (intentional for test containers)
    "B105",  # hardcoded_password_string (false positives in test fixtures & redaction)
    "B106",  # hardcoded_password_funcarg (false positives in test parameters)
]


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
neo4j_yass_mcp = ["py.typed"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.14.4",
]

